--- a/no3.html
+++ b/no3.html
@@ -18,7 +18,7 @@
       >
         <a
           href="https://tenor.com/view/peach-and-goma-goma-pester-hug-gif-26864867"
-          >Peach And Goma Goma Sticker</a
+          >Peach And Goma Sticker</a
         >from
         <a href="https://tenor.com/search/peach+goma-stickers"
           >Peach Goma Stickers</a
